   <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sans.myapplication.Login.Fragment.LoginBotFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_horizontal"
        android:background="@drawable/login_bg"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />



        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">



                <LinearLayout android:id="@+id/phone_login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:layout_width="0dp"
                            android:layout_weight=".25"
                            android:layout_marginTop="10dp"
                            android:layout_height="35dp"
                            android:background="@drawable/edit_text"
                            android:entries="@array/country_codes"
                            android:id="@+id/spinner" />

                        <AutoCompleteTextView android:id="@+id/phone" android:layout_width="0dp"
                            android:layout_weight=".75"
                            android:layout_height="35dp" android:hint="@string/prompt_phone"
                            android:inputType="phone"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="0dp"
                            android:textSize="15dp"
                            android:textColorHint="@color/grey"
                            android:background="@drawable/edit_text"
                            android:padding="5pt"
                            android:maxLines="1"
                            android:ems="10"
                            android:singleLine="true" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/password" android:layout_width="0dp"
                            android:layout_weight=".65"
                            android:layout_height="35dp" android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:layout_marginBottom="10px"
                            android:textColorHint="@color/grey"
                            android:padding="5pt"
                            android:background="@drawable/edit_text"
                            android:textSize="15dp"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true" />

                        <Button
                            android:id="@+id/key_button"
                            android:layout_width="0dp"
                            android:layout_weight=".35"
                            android:layout_marginTop="-2dp"
                            android:background="@drawable/edit_text"
                            android:layout_height="35dp"
                            android:textSize="15dp"
                            android:gravity="center"
                            android:stateListAnimator="@null"
                            android:textColor="@color/orange"
                            android:text="@string/serial_key_button"
                            />

                    </LinearLayout>

                    <Button android:id="@+id/login_button" style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" android:layout_height="35dp"
                        android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                        android:background="@drawable/grey_button"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:stateListAnimator="@null"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="點擊「登入」即表示同意"
                            android:textSize="11dp"
                            android:textColor="@color/grey"
                            android:layout_marginRight="5dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="軟件許可及服務協議"
                            android:textSize="11dp"
                            android:textColor="@color/orange"
                            />

                    </LinearLayout>



                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/menu_logo"
        android:layout_gravity="top|center_horizontal"
        />

</FrameLayout>
